[build-system]
requires = ["setuptools", "wheel"]


[project]
name = "deansi"
version = "1.2.1"
description = "ANSI codes to HTML converter"
authors = [
    { name="David García Garzón", email="voki@canvoki.net" },
]
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE"}
keywords = ["ansi", "console", "html"]

classifiers = [
	'Programming Language :: Python',
	'Programming Language :: Python :: 2',
	'Programming Language :: Python :: 3',
	'Topic :: Software Development :: Libraries :: Python Modules',
	'Topic :: System :: Logging',
	'Topic :: Text Processing :: Filters',
	'Topic :: Text Processing :: Markup :: HTML',
	'Environment :: Console',
	'Intended Audience :: Developers',
	'Development Status :: 5 - Production/Stable',
	'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
	'Operating System :: OS Independent',
]

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-cov',
]

[project.urls]
Homepage = "https://github.com/guifibaix/python-deansi"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/guifibaix/python-deansi"
Changelog = "https://github.com/guifibaix/python-deansi/blob/master/CHANGELOG.md"

[project.scripts]
deansi = "deansi:main"

[tool.setuptools.packages]
find = {}

[tool.coverage.run]
relative_files = true
branch = true
omit = ["**/*test.py"]

[tool.pytest.ini_options]
addopts = "--cov=deansi"


